--- a/QLabelEdit.ui
+++ b/QLabelEdit.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>408</width>
-    <height>114</height>
+    <width>361</width>
+    <height>27</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -79,6 +79,25 @@
        <width>16777215</width>
        <height>16777215</height>
       </size>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="units">
+     <property name="minimumSize">
+      <size>
+       <width>40</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>40</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
